--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -1,2 +1,3 @@
 
-	<div class="copyright">&copy; {{ data.copy }} - {{ data.app_title }}. Design: <a href="https://html5up.net">HTML5 UP</a>.</div>
+	<div class="copyright">&copy; {{ data.copy }} - <a href="{{ data.product }}">{{ data.app_title }}. 
+	Design: <a href="https://html5up.net">HTML5 UP</a>.</div>
