--- a/src/index.njk
+++ b/src/index.njk
@@ -6,12 +6,12 @@ layout : layouts/base.njk
 							<section class="panel banner right">
 								<div class="content color0 span-3-75">
 									<h1 class="major">
-									 	<a href="{{ data.github }}">Eleventy Ethereal</a>
+									 	<a href="{{ data.product }}">{{ data.app_title }}
 									 </h1>
 									<p>
-										Static Site prototyped on top of <a href="https://www.11ty.io/">Eleventy SSG</a> and Ethereal Html5Up Design.
+										<a href="https://appseed.us/static-site/">Static Site</a> prototyped on top of <a href="https://www.11ty.io/">Eleventy SSG</a>.
 										<br />
-										<a href="{{ data.github }}">Source Code</a>
+										<a href="{{ data.github }}">Source Code</a> - <a href="https://html5up.net">Html5Up Design</a>
 									</p>
 									<ul class="actions">
 										<li><a href="#first" class="button primary color1 circle icon solid fa-angle-right">Next</a></li>
@@ -115,11 +115,11 @@ layout : layouts/base.njk
 									</div>
 									<div class="span-1-5">
 										<ul class="contact-icons color1">
-											<li class="icon brands fa-twitter"><a href="#">@untitled-tld</a></li>
-											<li class="icon brands fa-facebook-f"><a href="#">facebook.com/untitled</a></li>
-											<li class="icon brands fa-snapchat-ghost"><a href="#">@untitled-tld</a></li>
-											<li class="icon brands fa-instagram"><a href="#">@untitled-tld</a></li>
-											<li class="icon brands fa-medium-m"><a href="#">medium.com/untitled</a></li>
+											<li class="icon brands fa-github"><a href="{{ data.github }}">@webappseed</a></li>
+											<li class="icon brands fa-twitter"><a href="{{ data.twitter }}">@webappseed</a></li>
+											<li class="icon brands fa-facebook-f"><a href="{{ data.facebook }}">facebook.com/webappseed</a></li>
+											<li class="icon brands fa-medium-m"><a href="{{ data.medium }}">medium.com/@appseed</a></li>
+											<li class="icon brands fa-youtube"><a href="{{ data.youtube }}">Youtube</a></li>
 										</ul>
 									</div>
 								</div>
